--- a/README.rdoc
+++ b/README.rdoc
@@ -1,2 +1,16 @@
-Requirement for `paperclip` gem:
-- `sudo apt-get install imagemagick -y`
+# Install the backend in a remote server
+
+Install `rbenv` and ruby 2.3.1
+
+```bash
+git clone https://github.com/rbenv/rbenv.git ~/.rbenv
+cd ~/.rbenv && src/configure && make -C src
+echo 'export PATH="$HOME/.rbenv/bin:$PATH"' >> ~/.zshrc
+echo 'eval "$(rbenv init -)"' >> ~/.zshrc
+source ~/.zshrc
+type rbenv  # it's a function!
+
+git clone https://github.com/sstephenson/ruby-build.git ~/.rbenv/plugins/ruby-build
+
+rbenv install 2.3.1
+```
