--- a/README.rdoc
+++ b/README.rdoc
@@ -1,16 +1,27 @@
 # Install the backend in a remote server
+Install mysql-server in the server.
 
-Install `rbenv` and ruby 2.3.1
+Log in to the remote server and install `rbenv` and the version of ruby
+that we're using (2.3.1 as of this writing).
 
 ```bash
+sudo apt-get install apt-get install libmysqlclient-dev
+
 git clone https://github.com/rbenv/rbenv.git ~/.rbenv
 cd ~/.rbenv && src/configure && make -C src
 echo 'export PATH="$HOME/.rbenv/bin:$PATH"' >> ~/.zshrc
+echo 'export PATH="$HOME/.rbenv/shims:$PATH"' >> ~/.zshrc
 echo 'eval "$(rbenv init -)"' >> ~/.zshrc
 source ~/.zshrc
 type rbenv  # it's a function!
 
 git clone https://github.com/sstephenson/ruby-build.git ~/.rbenv/plugins/ruby-build
 
-rbenv install 2.3.1
+rbenv install 2.3.1  # Or whatever ruby version we're currently using
 ```
+
+Copy the `config/database.yml` and `config/secrets.yml` from your working copy
+of the repo to the server under `<path-to-app>/shared/config`.
+
+Run this in the repos's directory (at your machine, not on the remote server):
+`bundle exec cap production deploy`
